# tarrow

./: .gitignore  Cargo.toml  README.md  setup.sh  test.sh
local/: docker-compose.yaml
migrations/2024-05-17-062027_create_object_db_tables/: down.sql  up.sql
migrations/2024-05-19-142818_create_tree_db_tables/: down.sql  up.sql
migrations/2024-05-21-080305_create_ref_tables/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  tarrow.rs
src/core/: types.rs
src/object_db/: errors.rs  mod.rs  models.rs  object_db.rs
src/objectdb/: errors.rs  mod.rs  models.rs  objectdb.rs
src/tests/: common_setup.rs  example_db_test.rs  mod.rs
src/tree_db/: mod.rs  tree_db.rs
test-setup/: docker-compose.yaml
