[package]
name = "tarrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
anyhow = "1.0.83"
serde = "1.0.202"
serde_json = "1.0.117"
tokio = {  version = "1.37.0", features = ["sync", "macros", "rt"] }
buffer = "0.1.9"

[dev-dependencies]
dotenvy = "0.15.7"
diesel_migrations = "2.1.0"
lazy_static = "1.4.0"
